--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -2,8 +2,9 @@
 .service-heading {
   margin: 15px 0;
   text-transform: none;
-  color: $blue-ajk;
+  color: $orange-ajk;
   font-size: 20px;
+  font-family: 'Caviar Dreams', Arial, Helvetica, sans-serif;
 }
 
 .association {
@@ -13,7 +14,7 @@
 }
 
 .partenary-section {
-  h4 { 
+  h4 {
     font-size: 1.3em;
     font-family: 'Caviar Dreams', Arial, Helvetica, sans-serif;
    }
