--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -23,6 +23,7 @@ $black-ajk: #393939;
 $green-ajk: #d0ef84;
 $beige-ajk: #fffcef;
 $blue-ajk: #52bad5;
+$red-mauve-ajk: #594040;
 
 // Responsive breakpoint
 $responsive: true;
