--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -76,7 +76,7 @@
     }
     &.navbar-shrink {
       padding: .5em;
-      background-color: $black-ajk;
+      background-color: $red-mauve-ajk;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
       0 6px 20px 0 rgba(0, 0, 0, 0.19);
       .navbar-brand {
