--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -10,6 +10,7 @@
 @import "slick-theme";
 @import "navbar.scss";
 @import "masthead.scss";
+@import "medias.scss";
 @import "services.scss";
 @import "portfolio.scss";
 @import "timeline.scss";
